@@ -77,6 +77,8 @@ class PluginListHandler extends HandlerBase
 			depTo = value;
 		else if(aname == "PLUGIN")
 			depPlugin = value;
+		else if(aname == "SIZE")
+			size = Integer.parseInt(value);
 	}
 
 	public void doctypeDecl(String name, String publicId,
@@ -133,6 +135,10 @@ class PluginListHandler extends HandlerBase
 			download = null;
 			branch = new PluginList.Branch();
 		}
+		else if(tag == "DOWNLOAD")
+			downloadSize = size;
+		else if(tag == "DOWNLOAD_SOURCE")
+			downloadSourceSize = size;
 	}
 
 	public void endElement(String tag)
@@ -171,7 +177,9 @@ class PluginListHandler extends HandlerBase
 			branch.version = version;
 			branch.date = date;
 			branch.download = download;
+			branch.downloadSize = downloadSize;
 			branch.downloadSource = downloadSource;
+			branch.downloadSourceSize = downloadSourceSize;
 			branch.obsolete = obsolete;
 			plugin.branches.addElement(branch);
 			version = null;
@@ -225,7 +233,10 @@ class PluginListHandler extends HandlerBase
 	private String version;
 	private String date;
 	private String download;
+	private int downloadSize;
 	private String downloadSource;
+	private int downloadSourceSize;
+	private int size;
 	private String depWhat;
 	private String depFrom;
 	private String depTo;
